# procurator

./: .gitignore  Readme.md  env.sh  pyproject.toml
procurator/: __init__.py  record.py  seed.py
procurator/config/: __init__.py
procurator/db/: __init__.py
procurator/utils/: logger.py
sql/: create_answer.sql  create_tables.sql  create_user.sql
