[tool.poetry]
name = "procurator"
version = "0.1.0"
description = "Server for CRUD proxy data."
authors = ["ltbringer <amresh.venugopal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pyaudio = "^0.2.11"
kaldi-serve = "^0.3.0"
psycopg2 = "^2.8"
yaspin = "^0.16.0"
prompt_toolkit = "^3.0"
jellyfish = "^0.7.2"
bullet = "^2.1"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
proxy-bot = "procurator:main"
proxy-init = "procurator.seed:main"

[[tool.poetry.source]]
name = "cheeseshop"
url = "https://cheeseshop.vernacular.ai"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
